manifests/05-db-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: voter-db
  namespace: voter
spec:
  serviceName: voter-db-service
  replicas: 1
  selector:
    matchLabels:
      app: voter-db
  template:
    metadata:
      labels:
        app: voter-db
    spec:
      containers:
        - name: postgres
          image: postgres:17
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "voter", "-d", "voterdb"]
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: voter-db-pvc
