manifests/09-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voter-api
  namespace: voter
spec:
  replicas: 4
  selector:
    matchLabels:
      app: voter-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: voter-api
    spec:
      containers:
        - name: voter-api
          image: kishanchoudhary/voter-api:v2
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health/live
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
