manifests/06-db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: voter-db-service
  namespace: voter
spec:
  clusterIP: None
  selector:
    app: voter-db
  ports:
    - port: 5432
      targetPort: 5432
      name: postgres
