manifests/10-api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: voter-api-service
  namespace: voter
spec:
  type: ClusterIP
  selector:
    app: voter-api
  ports:
    - port: 80
      targetPort: 8080
      name: http
