manifests/11-api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voter-api-ingress
  namespace: voter
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: voter-api-service
                port:
                  number: 80
